--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -18,4 +18,91 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
         cache: maven
-        
+    - name: Compilação
+      run: mvn clean install -DskipTests
+
+code-quality:
+  name: Qualidade de Código
+  needs: build
+  runs-on: ubuntu-latest
+
+  steps:
+  - name: Git Checkout
+    uses: actions/checkout@v3
+  - name: Adicionando permissao para o mvnw
+    run: chmod +x mvnw
+  - name: Analisar SonarCloud
+    run: ./mvnw verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=lab-crescer-pipeline
+    env:
+      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+tests:
+  name: Testes automatizados
+  needs: code-quality
+  runs-on: ubuntu-latest
+
+  steps:
+    - name: Git checkout
+      uses: actions/checkout@v3
+    - name: Configure JDK 11
+      uses: actions/setup-java@v3
+      with:
+        java-version: '11'
+        distribution: 'temurin'
+        cache: maven
+    - name: Compilação
+      run: mvn clean install -DskipTests
+    - name: Testes Unitarios
+      run: mvn -B test --file pom.xlm
+
+push-image:
+  name: Enviando imagem para o DockerHub
+  needs: tests
+  uses: ubuntu-latest
+
+  steps:
+  - name: Login DockerHub
+    uses: docker/login-action@v2
+    with:
+      username: ${{ secrets.DOCKERHUB_USERNAME }}
+      password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+  - name: Criação e envio da imagem
+    uses: docker/build-push-action@v4
+    with:
+      file: ./Dockerfile
+      push: true
+      run: | 
+        export DOCKER_BUILDKIT=0
+        export COMPOSE_DOCKER_CLI_BUILD=0
+      tags:
+        matheusbattiston/projetojavacrescer:latest
+
+deploy:
+  name: Publica App ACI
+  need: push-image
+  runs-on: ubuntu-latest
+  steps:
+  - name: Login via Azure CLI
+    uses: azure/login@v1
+    with:
+      creds : ${{ secrets.AZURE_CREDENTIALS }}
+
+  - name: Deploy da nossa aplicação hello java
+    uses: Azure/aci-deploy@v1
+    with:
+      resource-group: RG-APPS-CRESCER
+      dns-name-label: lab-crescer-matheus-felipe
+      image: matheusbattiston/projetojavacrescer:latest
+      cpu: 1
+      memory: 1
+      registry-login-server: docker.io
+      registry-username: ${{ secrets.REGISTRY_USERNAME }}
+      registry-password: ${{ secrets.REGISTRY_PASSWORD }}
+      name: lab-crescer-matheus-felipe
+      location: 'east us'
+
+
+
+
+
